--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 <!-- Title Section -->
 <section id="title" class="gradient-background">
     <div class="container">
-      <div class="row flex-lg-row-reverse align-items-center g-3 py-5">
-        <div class="col-10 col-sm-8 col-lg-6">
-          <img src="iphone.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="400" height="200" loading="lazy" style="padding-top: 5px; padding-bottom:0px;">
+      <div class="row flex-lg-row-reverse align-items-center g-3 py-5" style="padding-bottom:0px !important;">
+        <div class="col-10 col-sm-8 col-lg-6" style="padding-bottom:0px !important;">
+          <img src="iphone.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="400" height="200" loading="lazy" style="padding-top: 5px; padding-bottom:0px !important;">
         </div>
         <div class="col-lg-6 ps-lg-5">
           <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Meet new and interesting dogs nearby.</h1>
